--- a/app/globals.css
+++ b/app/globals.css
@@ -1,49 +1,6 @@
 @import "tailwindcss";
 
-/* FONTS */
-@font-face {
-    font-family: 'NewRodin Pro';
-    src: url('/fonts/New Rodin Pro/NewRodin Pro L.otf') format('opentype');
-    font-weight: 300;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'NewRodin Pro';
-    src: url('/fonts/New Rodin Pro/NewRodin Pro M.otf') format('opentype');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'NewRodin Pro';
-    src: url('/fonts/New Rodin Pro/NewRodin Pro DB.otf') format('opentype');
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'NewRodin Pro';
-    src: url('/fonts/New Rodin Pro/NewRodin Pro B.otf') format('opentype');
-    font-weight: 600;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'NewRodin Pro';
-    src: url('/fonts/New Rodin Pro/NewRodin Pro EB.otf') format('opentype');
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'NewRodin Pro';
-    src: url('/fonts/New Rodin Pro/NewRodin Pro UB.otf') format('opentype');
-    font-weight: 800;
-    font-style: normal;
-}
-
-
+/* FONTS - Now handled by Next.js next/font */
 
 /* VARIABLES */
 :root {
@@ -66,7 +23,7 @@ body {
     min-height: 100dvh;
     color: var(--text-color);
     background-color: var(--dark-color);
-    font-family: 'NewRodin Pro', sans-serif;
+    font-family: var(--font-new-rodin-pro), sans-serif;
 }
 
 /* CANVAS */
